--- a/sgim/templates/base.html
+++ b/sgim/templates/base.html
@@ -7,8 +7,13 @@
     <meta name="viewport" content="width=device-width, minimum-scale=1.0, initial-scale=1.0, user-scalable=yes">
  
     <script src="{{BOWER_URL}}jquery/dist/jquery.min.js"></script>
+    <script src="{{BOWER_URL}}jquery-cookie/jquery.cookie.js"></script>
+    <script src="{{STATIC_URL}}js/dist/1.js"></script>
+
     <script src="{{BOWER_URL}}semantic-ui/dist/semantic.min.js"></script>
     <link rel="stylesheet" href="{{BOWER_URL}}semantic-ui/dist/semantic.css">
+    <link rel="stylesheet" href="{{BOWER_URL}}snackbarjs/dist/snackbar.min.css">
+    <script src="{{BOWER_URL}}snackbarjs/dist/snackbar.min.js"></script>
 
     <link rel="stylesheet" href="{{STATIC_URL}}css/todo.min.css">
 
@@ -47,6 +52,7 @@
 </body>
 
 <script src="{{BOWER_URL}}semantic-ui/dist/semantic.js" type="text/javascript"></script>
+
 {% block scripts %}
 
 {% endblock scripts %}
