--- a/sgim/templates/includes/nav_bar.html
+++ b/sgim/templates/includes/nav_bar.html
@@ -10,7 +10,7 @@
     {% if user.is_authenticated %}            
         <div class="navbar-collapse collapse navbar-responsive-collapse">
             <ul class="nav navbar-nav">
-                <li class="toggle"><a href="javascript:void(0)"></a></li>
+                <li class="toggle"><a href="javascript:void(0)">Dispositivos</a></li>
                     <li class="dropdown" style="margin-right:20px">
                     <a href="bootstrap-elements.html" data-target="#" class="dropdown-toggle" data-toggle="dropdown">
                         <span class="glyphicon glyphicon-wrench" aria-hidden="true"></span> Mantto<b class="caret"></b>
