--- a/sgim/templates/base2.html
+++ b/sgim/templates/base2.html
@@ -15,7 +15,7 @@
     <link rel="stylesheet" href="{{BOWER_URL}}snackbarjs/dist/snackbar.min.css">
     <script src="{{BOWER_URL}}snackbarjs/dist/snackbar.min.js"></script>
 
-    <link rel="stylesheet" href="{{STATIC_URL}}css/estilos.css">
+    <link rel="stylesheet" href="{{STATIC_URL}}css/todo.min.css">
 
  <!--Import materialize.css-->
     <link href="{{BOWER_URL}}bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
@@ -23,43 +23,40 @@
     <link rel="stylesheet" href="{{BOWER_URL}}bootstrap-material-design/dist/css/material.min.css"  media="screen,projection"/>
     <link rel="stylesheet" href="{{BOWER_URL}}bootstrap-material-design/dist/css/ripples.min.css"  media="screen,projection"/>
 
- <script src="{{BOWER_URL}}webcomponentsjs/webcomponents.js">  </script>
+    <script src="{{BOWER_URL}}webcomponentsjs/webcomponents.js">  </script>
 
-    <link rel="import" href="{{BOWER_URL}}paper-progress/paper-progress.html">
+    {% include "includes/polymer.html" %}
 
-     <!--Import materialize.css
-      <link type="text/css" rel="stylesheet" href="{{BOWER_URL}}materialize/dist/css/materialize.css"  media="screen,projection"/>
--->
 
     {% block include_statics %}
-        
+
     {% endblock include_statics %}
 
+        <script>
+            
+            $.snackbar({content: "<h5 style='color:yellow'><i class='warning yellow sign icon'></i> Se encontraron los siguientes inconvenientes: </h5>", timeout: 0 });
+
+             window.addEventListener('polymer-ready', function() {
+                //document.querySelector('#spinner').classList.add('hidden');
+                console.log("mmmmmmmmmmmm")
+      });
+        </script>
 </head>
-<body >
+<body unresolved>
 
-<div class="contain-to-grid sticky">
-    {% include "includes/nav_bar.html" %}
-</div>
-
-  
     {% block contenido %}
 
     {% endblock contenido %}
  
-   <script type="text/javascript" src="{{BOWER_URL}}materialize/dist/js/materialize.min.js"></script>
+
     <script src="{{BOWER_URL}}bootstrap/dist/js/bootstrap.min.js"></script>
     <script src="{{BOWER_URL}}bootstrap-material-design/dist/js/ripples.min.js"></script>
     <script src="{{BOWER_URL}}bootstrap-material-design/dist/js/material.min.js"></script>
     <script>
         $(document).ready(function() {
                 $.material.init();
-                 $(".button-collapse").sideNav();
         });
     </script>
-
-
-    
 </body>
 
 <script src="{{BOWER_URL}}semantic-ui/dist/semantic.js" type="text/javascript"></script>
