--- a/sgim/templates/includes/nav_bar.html
+++ b/sgim/templates/includes/nav_bar.html
@@ -10,19 +10,42 @@
     {% if user.is_authenticated %}            
         <div class="navbar-collapse collapse navbar-responsive-collapse">
             <ul class="nav navbar-nav">
-                <li class="toggle"><a href="javascript:void(0)">Dispositivos</a></li>
-                    <li class="dropdown" style="margin-right:20px">
+                <li class="dropdown" >
                     <a href="bootstrap-elements.html" data-target="#" class="dropdown-toggle" data-toggle="dropdown">
-                        <span class="glyphicon glyphicon-wrench" aria-hidden="true"></span> Mantto<b class="caret"></b>
+                        Inventario<b class="caret"></b>
                     </a>
                     <ul class="dropdown-menu">
-                        <li><a href="{% url 'tarea_add' %}">Tarea</a></li>
-                        <li><a href="{% url 'actualizar_clave' %}">Rutina</a></li>
+                        <li><a href="{% url 'tarea_add' %}">Dispositivos</a></li>
+                        <li><a href="{% url 'actualizar_clave' %}">Servicios</a></li>
+                        <li class="divider"></li>
+                        <li><a href="/admin">Componentes</a></li>
+                        <li><a href="{% url 'logout' %}">Boletas</a></li>
+                    </ul>
+                </li> 
+                <li class="dropdown" >
+                    <a href="bootstrap-elements.html" data-target="#" class="dropdown-toggle" data-toggle="dropdown">
+                        Mantenimientos<b class="caret"></b>
+                    </a>
+                    <ul class="dropdown-menu">
+                        <li><a href="{% url 'tarea_add' %}">Tareas</a></li>
+                        <li><a href="{% url 'actualizar_clave' %}">Rutinas</a></li>
                         <li class="divider"></li>
                         <li><a href="/admin">Programacion</a></li>
                         <li><a href="{% url 'logout' %}">Boletas</a></li>
                     </ul>
-                </li>               
+                </li> 
+                <li class="dropdown" >
+                    <a href="bootstrap-elements.html" data-target="#" class="dropdown-toggle" data-toggle="dropdown">
+                        Incidencias<b class="caret"></b>
+                    </a>
+                    <ul class="dropdown-menu">
+                        <li><a href="{% url 'tarea_add' %}">Tareas</a></li>
+                        <li><a href="{% url 'actualizar_clave' %}">Rutinas</a></li>
+                        <li class="divider"></li>
+                        <li><a href="/admin">Programacion</a></li>
+                        <li><a href="{% url 'logout' %}">Boletas</a></li>
+                    </ul>
+                </li> 
             </ul>
           
             <ul class="nav navbar-nav navbar-right">
