--- a/sgim/templates/inventario/nuevo_dispositivo.html
+++ b/sgim/templates/inventario/nuevo_dispositivo.html
@@ -8,10 +8,8 @@
     <link rel="stylesheet" href="{{BOWER_URL}}w2ui/w2ui-1.4.2.min.css">
 {% endcomment %}
 <link rel="stylesheet" href="{{BOWER_URL}}jqwidgets/jqwidgets/styles/jqx.base.css" type="text/css" />
-    <link rel="stylesheet" href="{{BOWER_URL}}jqwidgets/jqwidgets/styles/jqx.metro.css" type="text/css" />
-    <link rel="stylesheet" href="{{BOWER_URL}}jqwidgets/jqwidgets/styles/jqx.bootstrap.css" type="text/css" />
-    <link rel="stylesheet" href="{{STATIC_URL}}css/teal.min.css">
-   
+<link rel="stylesheet" href="{{BOWER_URL}}jqwidgets/jqwidgets/styles/jqx.metro.css" type="text/css" />
+
     
     <script type="text/javascript" src="{{BOWER_URL}}jqwidgets/jqwidgets/jqxcore.js"></script>
     <script type="text/javascript" src="{{BOWER_URL}}jqwidgets/jqwidgets/jqxbuttons.js"></script>
@@ -25,16 +23,22 @@
     <script type="text/javascript" src="{{BOWER_URL}}jqwidgets/jqwidgets/jqxtooltip.js"></script>
     <script type="text/javascript" src="{{BOWER_URL}}jqwidgets/jqwidgets/globalization/globalize.js"></script>
       <script type="text/javascript" src="{{BOWER_URL}}jqwidgets/jqwidgets/jqxexpander.js"></script> 
-    <script type="text/javascript" src="{{BOWER_URL}}jqwidgets/jqwidgets/jqxvalidator.js"></script> 
+    <script type="text/javascript" src="{{BOWER_URL}}jqwidgets/jqwidgets/jqxvalidator.js"></script>
+
+
 
    <style shim-shadowdom>
   
   
-    paper-progress {
+    progress {
       display: block;
       width: 100%;
       margin-bottom: 5px;
     }
+       core-drawer-panel{
+       padding-top:90px;
+       }
+
 
   </style>
   
@@ -43,6 +47,8 @@
 
 {% block contenido %}
 
+
+        
 <ul class="breadcrumb" style="margin-bottom: 5px;">
     <li><a href="/">Inicio</a></li>
     <li><a href="">Inventario</a></li>
@@ -50,8 +56,12 @@
     <li class="active">Registrar</li>
 </ul>
 
+<div class="progress ">
+      <div class="indeterminate"></div>
+</div>
+         
 <div class="container-fluid"> 
-<paper-progress indeterminate></paper-progress>  
+ 
 
 <div class="row">
 
@@ -212,8 +222,6 @@
     </div>
 </div>
 </div>
-
-
 {% endblock contenido %}
 
 
@@ -329,10 +337,11 @@ var tipoSource =
         /* Act on the event */
     });
 
-$("paper-progress").css("visibility", "hidden")
+    $(".progress").css("visibility", "hidden")
     $('#formDisp').on('validationSuccess', function (event) { 
-        $("paper-progress").css("visibility", "")
+        $(".progress").css("visibility", "")
 
+     setTimeout(function(){
         $.ajax({
             url: '/inventario/dispositivo/',
             type: 'POST',
@@ -357,10 +366,10 @@ $("paper-progress").css("visibility", "hidden")
                 $("#serie").val(null); 
                 $("#inventario").val(null);
                 $("#posicion").val(null);
-                $("paper-progress").css("visibility", "hidden")
+                $(".progress").css("visibility", "hidden")
             }
             else{
-                $("paper-progress").css("visibility", "hidden")
+                $(".progress").css("visibility", "hidden")
                 var mensaje = "<ul>";
                 for(var i=0;i<data.errores.length;i++){
                     e = data.errores[i]
@@ -375,7 +384,7 @@ $("paper-progress").css("visibility", "hidden")
             $.snackbar({content: "<i class='warning red sign icon'></i> Error: "+ e.status + ": "+e.statusText});
         })
         
-        
+        },600)   
         
         //$("#notificationContent").html("Dispositivo Registrado!");
         //$('#jqxNotification').jqxNotification({ autoClose: false }); 
