Login Con modelo personalisado

--- a/sgim/templates/base.html
+++ b/sgim/templates/base.html
@@ -54,7 +54,7 @@
     <script>
         $(document).ready(function() {
                 $.material.init();
-                 $(".button-collapse").sideNav();
+                 //$(".button-collapse").sideNav();
         });
     </script>
 
